fix on tablet screen

--- a/src/styles/pos/_config.scss
+++ b/src/styles/pos/_config.scss
@@ -569,3 +569,6 @@
   right: 30px;
 }
 
+.general-info{
+  padding: 20px 35px;
+}
